# limit-order-book

./: .gitignore  CMakeLists.txt  MILESTONES.md  README.md
.github/badges/: coverage.json
.github/workflows/: ci.yml  coverage.yml
benchmarks/: OrderBookGoogleBenchmark.cpp
docs/: V6_TESTS.md  benchmark_results_v1.csv  benchmark_results_v2_pool.csv  benchmark_results_v2_pool_raw.json
docs/architecture/: README.md
include/: MatchingEngine.h  Order.h  OrderBookSide.h  OrderNodePool.h  Trade.h
scripts/: generate_benchmark_graphs.py  generate_coverage.sh
src/: MatchingEngine.cpp  Order.cpp  OrderBookSide.cpp  OrderNodePool.cpp  Trade.cpp  main.cpp
tests/: BestMatchingBySideTest.cpp  CancelOrderTest.cpp  FormattingAndPrintTest.cpp  MatchingEngineTest.cpp  MatchingEngineV5Test.cpp  MatchingEngineV6Test.cpp  MatchingEngineV7Test.cpp  MatchingEngineV8ModifyOrderTest.cpp  ModifyOrderTest.cpp  OrderBookSideTest.cpp  OrderIdBehaviorTest.cpp  OrderNodePoolTest.cpp  OrderTypeBehaviorTest.cpp  TestHelpers.h
